# voiceops-gateway

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py  routes_health.py  routes_metrics.py  routes_sessions.py
backend/app/audio/: buffer.py  codecs.py  mulaw.py  pcm16.py  validation.py
backend/app/core/: config.py  errors.py  logging.py  observability.py  security.py
backend/app/events/: logger.py  models.py  repository.py
backend/app/metrics/: collector.py  latency.py  prometheus.py
backend/app/middleware/: cors.py  rate_limit.py  request_id.py
backend/app/realtime/: event_mapper.py  mock_provider.py  openai_provider.py  provider.py  session_config.py
backend/app/sessions/: manager.py  memory.py  models.py  repository.py  service.py  state_machine.py
backend/app/storage/: redis.py
backend/app/ws/: connection_manager.py  gateway.py  protocol.py  schemas.py  serializers.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/tests/unit/: test_audio_validation.py  test_event_mapper.py  test_mock_provider.py  test_protocol.py  test_state_machine.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/hooks/: useAudioPlaybackQueue.ts  useAudioWorkletCapture.ts  useBrowserSpeechRecognition.ts  useLatencyMetrics.ts  useMicrophonePermission.ts  useReconnectBackoff.test.ts  useReconnectBackoff.ts  (+4 more)
observability/: prometheus.yml
(+44 files in other folders)
