[project]
name = "voiceops-gateway-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.112.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-json-logger>=2.0.7",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.5",
  "websockets>=12.0"
]

[project.optional-dependencies]
test = ["pytest>=8.3.2", "pytest-asyncio>=0.23.8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.ruff]
line-length = 100
